shitty log and catch module removed & status module implemented
