# src/auth/dto/check.dto.ts
@@ -1,7 +1,6 @@
 import { ApiProperty } from '@nestjs/swagger';
 import { IsBoolean, IsObject, IsOptional } from 'class-validator';
 
-import { ResponseDto } from 'src/error/response.dto';
 
 export class IsUserLogged {
     @ApiProperty({
@@ -10,11 +9,4 @@ export class IsUserLogged {
     })
     @IsBoolean()
     status: boolean;
-}
-
-export class IsUserLoggedResponseDto extends ResponseDto {
-    @ApiProperty({ type: IsUserLogged })
-    @IsObject()
-    @IsOptional()
-    data: IsUserLogged
 }
